[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "prefabconvert"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
prefabconvert = "convert:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["convert", "blender_backend"]

[tool.uv]
package = true
